--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AnimalPlanet</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_color_world">ColorWorldActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 </resources>
